# recipe-executor

./: .env.example  .gitignore  CLAUDE.md  CODE_CHANGES_FOR_SPECS.md  Makefile  PR_NOTE.md  README.md  pyproject.toml  recipe_tool.py
ai_context/: COMPONENT_DOCS_SPEC_GUIDE.md  DEV_GUIDE_FOR_PYTHON.md  PYDANTIC_AI_DOCS.md
ai_context/git_collector/: LIQUID_PYTHON_DOCS.md
docs/: codebase_generator_guide.md  dev_guidance.md  diagrams.md  recipe_executor_guide.md
mcp-servers/python-code-tools/: pyproject.toml
recipe-executor-ux/: README.md  requirements.txt
recipe-executor-ux/app/: main.py
recipe-executor-ux/frontend/: App.css  App.tsx  package.json  pnpm-lock.yaml  vite.config.ts
recipe_executor/: __init__.py  cli.py  config.py  context.py  executor.py  llm.py  logger.py  logger_setup.py  main.py  models.py  parser.py  preprocessor.py  protocols.py  registry.py  utils.py
recipe_executor/llm_utils/: azure_openai.py  llm.py  mcp.py
recipe_executor/steps/: __init__.py  base.py  conditional.py  execute_recipe.py  file_read.py  file_write.py  generate_llm.py  llm_generate.py  loop.py  mcp.py  parallel.py  read_file.py  read_files.py  registry.py  run_command.py  run_recipe.py  write_files.py
recipe_executor/utils/: models.py  templates.py
recipes/: 1. Prototype Feature Implementation.md  2. Enhanced Code Review.md  3. Automated Test Suite Generation.md  4. Module Builder and Documentation.md  5. Component Splitter and Integrator.md  README.md  hello_world.md
recipes/blueprint_generator/: analyze_components.json  blueprint_generator.json  build_blueprint.json  generate_blueprints.json  process_final_components.json  project_split_analysis.json  recursive_process.json  split_components.json
recipes/codebase_generator/: generate_code.json
tools/: create.sh  migrate_recipe_json_files.py
(+165 files in other folders)
